# GenerateCloudApp

./: .gitignore  CMakeLists.txt  LICENSE
data/: caltab_400.descr
include/core/: calibration_task.h  logger.h  params_init_task.h  reconstruction_task.h  system_params.h  task.h  task_manager.h  task_manager_impl.h
include/gui/: app.h  calibration_page.h  disabled_block.h  log_panel.h  main_window.h  params_panel.h  reconstruction_page.h  task_panel.h
include/modules/: cmdline.h
include/modules/nlohmann/: json.hpp
src/: main.cpp
src/core/: calibration_task.cpp  logger.cpp  params_init_task.cpp  reconstruction_task.cpp  system_params.cpp  task_manager_impl.cpp
src/gui/: app.cpp  calibration_page.cpp  log_panel.cpp  main_window.cpp  params_panel.cpp  reconstruction_page.cpp  task_panel.cpp
